Updated ctb.properties for distribution.

--- a/config/ctb.properties
+++ b/config/ctb.properties
@@ -1,1 +1,10 @@
-ctb.ivf.dataroot: data/ivf/2016AA
+ctb.ivf.dataroot: ivf/Base.2016AB
+#
+# If you have LVG installed, uncomment and modify property
+# ctb.lvg.directory to use LVG with ctb.
+#
+# ctb.lvg.directory: <location of LVG installation>
+#
+# E.G.:
+#
+# ctb.lvg.directory: /opt/tools/lvg2016
