Logging is now sent to a application specific logfile
Modified logging property file to send output to a separate logging
file instead of console (or main logfile in tomcat).

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,5 +1,9 @@
-log4j.rootLogger=INFO, console
-log4j.logger.example=DEBUG
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
+log4j.rootLogger=INFO, R
+
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.File=logs/ctbapp.log
+log4j.appender.R.MaxFileSize=5000KB
+# Keep five backup files
+log4j.appender.R.MaxBackupIndex=5
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss} %5p [%F:%L] %c - %m%n
