Added comments to application property file.

--- a/config/ctb.properties
+++ b/config/ctb.properties
@@ -1,3 +1,6 @@
+# ctb.properties configuration file
+#
+# Location of UMLS dataset indexes
 ctb.ivf.dataroot: data/ivf/Base.2016AB
 # ctb.ivf.dataroot: data/ivf/efo
 #
@@ -9,3 +12,5 @@ ctb.ivf.dataroot: data/ivf/Base.2016AB
 # E.G.:
 #
 # ctb.lvg.directory: /opt/tools/lvg2016
+#
+# ctb.lvg.directory: /net/lhcdevfiler/vol/cgsb5/ind/II_Group_WorkArea/tools/lvg2020
